# ai-quiz-builder

./: README.md  gemini.md  pyproject.toml
.devcontainer/: devcontainer.json
src/ai_quiz_builder/: __init__.py  app.py  logic.py  pdf_handler.py
